@@ -360,6 +360,132 @@ name|shutdown
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testClean
+specifier|public
+name|void
+name|testClean
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|zkDir
+init|=
+name|dataDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"zookeeper/server1/data"
+decl_stmt|;
+name|ZkTestServer
+name|server
+init|=
+literal|null
+decl_stmt|;
+name|server
+operator|=
+operator|new
+name|ZkTestServer
+argument_list|(
+name|zkDir
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|run
+argument_list|()
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|tryCleanSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|SolrZkClient
+name|zkClient
+init|=
+operator|new
+name|SolrZkClient
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|,
+name|AbstractZkTestCase
+operator|.
+name|TIMEOUT
+argument_list|)
+decl_stmt|;
+name|zkClient
+operator|.
+name|makePath
+argument_list|(
+literal|"/test/path/here"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|zkClient
+operator|.
+name|makePath
+argument_list|(
+literal|"/zz/path/here"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|zkClient
+operator|.
+name|clean
+argument_list|(
+literal|"/"
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|zkClient
+operator|.
+name|exists
+argument_list|(
+literal|"/test"
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|zkClient
+operator|.
+name|exists
+argument_list|(
+literal|"/zz"
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|zkClient
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|testReconnect
 specifier|public
 name|void
